[package]
name = "gc_log_analyzer"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "gca"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
chrono = {version = "0.4.41", features = ["serde"]}
clap = {version = "4.5.38", features = ["derive"]}
csv = "1.3.1"
plotters = "0.3.7"
regex = "1.11.1"
serde = {version = "1.0.219", features = ["derive"]}
